# deimos

./: .gitattributes  .gitignore  .tool-versions  CHANGELOG.md  CLAUDE.md  Cargo.toml  Justfile  LICENSE-0BSD.txt  LICENSE-APACHE.txt  README.md  package.json
.claude/: .gitignore  settings.json
docs/: README.md  hardware.md  interpn.md  sdk-quickstart.md  signal-pipeline.md
firmware/analog_i_rev4/: Cargo.toml
firmware/analog_i_rev4/.cargo/: config.toml
firmware/analog_i_rev4/src/board/: configuring.rs  mod.rs  operating.rs  startup.rs
firmware/analog_i_rev4/src/board/subsystems/: interrupts.rs  net.rs  sampling.rs
software/deimos/: Cargo.toml  README.md  pyproject.toml
software/deimos-console/: Cargo.toml  README.md
software/deimos-console/examples/: console.toml
software/deimos-console/src/: app.rs  config.rs  forensic.rs  main.rs  receiver.rs
software/deimos-console/tests/: integration_wire.rs
software/deimos/.cargo/: config.toml
software/deimos/docs/: rustdoc.css
software/deimos/examples/: analog_i_rev3.rs  basic.py  basic.rs  beta.rs  demo.rs  hootl.py  hootl.rs  hootl_butter_reset.rs  hootl_csv_fallback.rs  hootl_lifecycle.rs  hootl_reporting.rs  hootl_two_controllers.rs  hootl_with_console.rs  ipc.rs  ipc_plugin.rs  lookups.rs  mockup.py  monitor.py  multi_daq.rs  rev7_0_0_calibration.rs  rev7_calibration.rs  rev7_calibration_console.toml  sideloading.rs
software/deimos/examples/common/: mod.rs
software/deimos/examples/machine/: abort.csv  cfg.json  high.csv  low.csv
software/deimos/examples/sideloading/: main.rs
software/deimos/scripts/: its90_cold_junc_tables_rust.txt  pt100_rtd_din-43-760.csv  pt100_rtd_din-43-760.py  pt100_rtd_din-43-76_rust.txt  requirements.txt  type_k_its90.py  type_k_its90_csv_from_tab.csv  type_k_its90_mod.csv  type_k_its90_trunc.csv
software/deimos/src/: buffer_pool.rs  lib.rs  logging.rs  orchestrator.rs  python.rs
software/deimos/src/calc/: CLAUDE.md  affine.rs  butter.rs  constant.rs  inverse_affine.rs  machine.rs  mod.rs  orchestrator.rs  pid.rs  polynomial.rs  rtd_pt100.rs  sequence_machine.rs  sin.rs  tc_ktype.rs
software/deimos/src/calc/sequence_machine/: lookup.rs  mod.rs  sequence.rs  transition.rs
software/deimos/src/calcs/: affine.rs  constant.rs  inverse_affine.rs  mod.rs  pid.rs  rtd_pt100.rs  sin.rs  tc_ktype.rs
software/deimos/src/controller/: CLAUDE.md  channel.rs  context.rs  controller_state.rs  mod.rs  nonblocking.rs  peripheral_state.rs  replay.rs  timing.rs
software/deimos/src/deimos/: __init__.py  calc.pyi  deimos.pyi  dispatcher.pyi  peripheral.pyi  socket.pyi
software/deimos/src/dispatcher/: CLAUDE.md  channel_filter.rs  csv.rs  decimation.rs  df.rs  latest.rs  low_pass.rs  mod.rs  tsdb.rs
software/deimos/src/dispatcher/reporting/: mod.rs  wire.rs
software/deimos/src/math/: mod.rs  polynomial.rs
software/deimos/src/peripheral/: CLAUDE.md  analog_i_rev_2.rs  analog_i_rev_3.rs  analog_i_rev_4.rs  calibration.rs  deimos_daq_rev5.rs  deimos_daq_rev6.rs  deimos_daq_rev7.rs  hootl.rs  hootl_mockup.rs  mod.rs
software/deimos/src/peripheral/deimos_daq_rev7/: calibration_7_0_0.rs  mod.rs
software/deimos/src/peripherals/: analog_i_rev_2.rs  analog_i_rev_3.rs  analog_i_rev_4.rs  mod.rs
software/deimos/src/python/: calc.rs  controller.rs  mod.rs  transfer.rs
software/deimos/src/socket/: CLAUDE.md  mod.rs  orchestrator.rs  thread_channel.rs  udp.rs  unix.rs  worker.rs
software/deimos/src/units/: mod.rs
software/deimos/tests/: test_docs.py  test_examples.py  test_smoketest.py
software/deimos_console/: Cargo.toml  README.md
software/deimos_console/examples/: console.toml
software/deimos_console/src/: app.rs  config.rs  forensic.rs  lib.rs  main.rs  receiver.rs
software/deimos_console/src/app/: tests.rs
software/deimos_console/tests/: integration_wire.rs  subprocess_smoke.rs
software/deimos_editor/: Cargo.toml
software/deimos_editor/examples/: controller.json
software/deimos_editor/src/: app.rs  lib.rs  main.rs
software/deimos_gui/: Cargo.toml  README.md
software/deimos_gui/examples/: basic_example.json  multi_daq.json
software/deimos_numerics/: Cargo.toml  README.md
software/deimos_numerics/.cargo/: config.toml
software/deimos_numerics/benches/: bench.rs
software/deimos_numerics/examples/numerics_explorer/: Cargo.toml  README.md  index.html  style.css
software/deimos_numerics/examples/numerics_explorer/src/: app.rs  catalog.rs  plot_helpers.rs
software/deimos_numerics/examples/numerics_explorer/src/examples/: dense_spectral.rs  equilibration.rs  estimation.rs  filter_design.rs  gramians_hsvd.rs  home.rs  identification.rs  linear_solvers.rs  lti.rs  lti_gallery.rs  nonlinear_estimation.rs  pid_design.rs  process_model_fit.rs  reduction.rs  savgol_design.rs  sparse_cholesky.rs  synthesis.rs
software/deimos_numerics/src/: lib.rs
software/deimos_numerics/src/control/lti/: analog_topology.rs  delta_sos.rs  error.rs  mod.rs  response.rs
software/deimos_numerics/src/control/lti/filter_design/: mod.rs  order.rs
software/deimos_numerics/src/embedded/fixed/: median.rs  mod.rs
software/deimos_numerics/src/embedded/fixed/lti/: delta_sos.rs
software/deimos_numerics/src/sparse/: matvec.rs
software/deimos_shared/: Cargo.toml  README.md
software/deimos_shared/.cargo/: config.toml
software/deimos_shared/examples/: export_rev7_bode.sh  rev7_bode.rs
software/deimos_shared/scripts/: its90_cold_junc_tables_rust.txt  pt100_rtd_din-43-760.py  pt100_rtd_din-43-76_rust.txt  type_k_its90.py
software/deimos_shared/src/: lib.rs
software/deimos_shared/src/calcs/: affine.rs  constant.rs  inverse_affine.rs  mod.rs  rtd_pt100.rs  sin.rs  tc_ktype.rs
software/deimos_shared/src/peripherals/: analog_i_rev_3.rs  analog_i_rev_4.rs  deimos_daq_rev5.rs  deimos_daq_rev7.rs  mod.rs  model_numbers.rs
software/deimos_shared/src/peripherals/analog_i_rev_2/: mod.rs  operating_roundtrip.rs
software/deimos_shared/src/peripherals/analog_i_rev_3/: mod.rs  operating_roundtrip.rs
software/deimos_shared/src/states/: binding.rs  configuring.rs  mod.rs  operating.rs
(+734 files in other folders)
