[workspace]
members = [
    "software/deimos",
    "software/deimos_shared",
    "software/deimos_editor"
]
exclude = [ "firmware", "hardware" ]
resolver = "3"

[workspace.package]
authors = ["Deimos Controls LLC <support@deimoscontrols.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/deimoscontrols/deimos"

[workspace.metadata."docs.rs"]
all-features = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
overflow-checks = true

[profile.dev]
opt-level = 3
