[workspace]
members = [
    "software/deimos", 
    "software/deimos_shared"
]
exclude = [ "firmware", "hardware" ]
resolver = "3"

[workspace.package]
authors = ["Deimos Controls LLC <support@deimoscontrols.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/deimoscontrols/deimos"
version = "0.15.0"

[workspace.metadata."docs.rs"]
all-features = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
overflow-checks = true
