[workspace]
members = [
    "software/deimos",
    "software/deimos_console",
    "software/deimos_shared",
    "software/deimos_numerics",
]
exclude = [
    "firmware",
    "hardware",
    "software/deimos_numerics/examples/numerics_explorer",
]
resolver = "3"

[workspace.package]
authors = ["Deimos Controls LLC <support@deimoscontrols.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/deimoscontrols/deimos"
version = "0.18.0"

[workspace.metadata."docs.rs"]
all-features = true

[profile.release]
opt-level = 3
codegen-units = 1
lto = true
overflow-checks = true

[profile.dev]
opt-level = 1
codegen-units = 32
lto = false
