[package]
name = "deimos_bare_metal"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = 3

[dependencies]
cortex-m = { version = "^0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
stm32h7xx-hal = { version = "0.16.0", features=["rt", "revision_v", "stm32h743v", "ethernet"] }
#stm32h7xx-hal = { path = "../../../../stm32h7xx-hal", features=["rt", "revision_v", "stm32h743v", "ethernet"] }
nb = "1.1.0"
irq = "0.2.3"
flaw = "0.2.4"
atomic_float = "1.1.0"
array-macro = "2.1.8"

deimos_shared = { path = "../../software/deimos_shared", version="0.4.0" }

[dependencies.smoltcp]
version = "0.11.0"
default-features = false
features = ["medium-ethernet", "proto-ipv4", "socket-raw", "socket-udp", "socket-dhcpv4"]