[package]
name = "deimos"
version = "0.8.0"
edition = "2024"
authors = ["Deimos Controls LLC <support@deimoscontrols.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deimoscontrols/deimos/software/deimos"
homepage = "https://github.com/deimoscontrols/deimos"
description = "Control-loop and data pipeline for Deimos data acquisition system"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata."docs.rs"]
all-features = true

[dependencies]
deimos_shared = { path = "../deimos_shared", version = "0.4.0" }

# Control loop prep
chrono = { version = "0.4.39", features = ["std"], default-features = false }  # timestamp formatting
core_affinity = { version = "0.8.1", optional = true }
thread-priority = {version = "1.2.0", optional = true }

# Calcs
flaw = "0.2.4"
interpn = { version = "0.4.5", default-features = false }
once_cell = "1.20.2"

# Sideloading support
crossbeam = { version = "0.8.4", optional = true }

# Serialization
# Loose versioning enables plugins without multiple crate versions per build
serde = { version = "^1", features = ["derive", "rc"], optional = true }
typetag = { version = "^0.2", optional = true }
serde_json = { version = "^1", features = ["preserve_order"], optional = true }

# Dataframe dispatcher
polars = { version = "0.46.0", optional = true, features = ["fmt"], default-features = false }

# Timescale DB interface
postgres = { version = "0.19.9", optional = true }
postgres-types = { version = "0.2.8", optional = true }

[features]
default = ["ser"]
tsdb = ["postgres", "postgres-types"]
df = ["polars"]
ser = ["serde", "typetag", "serde_json"]
affinity = ["core_affinity", "thread-priority"]
sideloading = ["crossbeam"]

[[example]]
name = "multi_daq"
required-features = ["tsdb", "ser"]

[[example]]
name = "ipc_plugin"
required-features = ["df"]

[[example]]
name = "sideloading"
required-features = ["sideloading"]