[package]
name = "deimos"
version = "0.10.3"
edition = "2024"
authors = ["Deimos Controls LLC <support@deimoscontrols.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deimoscontrols/deimos/software/deimos"
homepage = "https://github.com/deimoscontrols/deimos"
description = "Control-loop and data pipeline for Deimos data acquisition system"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata."docs.rs"]
all-features = true

[dependencies]
deimos_shared = { path = "../deimos_shared", version = "0.5.0" }

# Control loop prep
chrono = { version = "0.4.39", features = ["std"], default-features = false }  # timestamp formatting
core_affinity = "0.8.1"
thread-priority = "2.1.0"

# Calcs
flaw = "0.2.5"
interpn = { version = "0.4.5", default-features = false }
once_cell = "1.20.2"

# Sideloading support
crossbeam = "0.8.4"

# Serialization
# Loose versioning enables plugins without multiple crate versions per build
serde = { version = "^1", features = ["derive", "rc"] }
typetag = "^0.2"
serde_json = { version = "^1", features = ["preserve_order"] }

# Timescale DB / Postgres interface
postgres = "0.19.10"
postgres-types = "0.2.9"

[features]

[[example]]
name = "multi_daq"

[[example]]
name = "ipc_plugin"

[[example]]
name = "sideloading"