[package]
name = "deimos_shared"
version = "0.4.0"
edition = "2021"
authors = ["Deimos Controls LLC <support@deimoscontrols.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deimoscontrols/deimos/software/deimos_shared"
homepage = "https://github.com/deimoscontrols/deimos"
description = "Shared packet formats and related resources for Deimos DAQ ecosystem"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byte_struct = "0.9.0"
