[package]
name = "deimos_shared"
version.workspace = true
edition = "2021"
authors = ["Deimos Controls LLC <support@deimoscontrols.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/deimoscontrols/deimos/software/deimos_shared"
homepage = "https://github.com/deimoscontrols/deimos"
description = "Shared packet formats and related resources for Deimos DAQ ecosystem"
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata."docs.rs"]
all-features = true
rustdoc-args = ["--extend-css", "docs/rustdoc.css", "--default-theme", "dark"]

[dependencies]
byte_struct = "0.9.0"
deimos_numerics = { path = "../deimos_numerics", version = "0.18.0", default-features = false, optional = true }

[dev-dependencies]
plotly = { version = "0.14.1", features = ["static_export_default"] }
serde_json = "1"

[features]
default = []
alloc = ["dep:deimos_numerics", "deimos_numerics/alloc"]

[[example]]
name = "rev7_bode"
required-features = ["alloc"]
